--- a/mk.conf
+++ b/mk.conf
@@ -2,7 +2,7 @@
 # /etc/pkgmk.conf: pkgmk(8) configuration
 #
 
-export CFLAGS="-Os -march=x86-64 -pipe"
+export CFLAGS="-O2 -march=x86-64 -pipe"
 export CXXFLAGS="${CFLAGS}"
 
 # export MAKEFLAGS="-j2"
@@ -32,7 +32,7 @@ PKGMK_WORK_DIR="$TOP/work/${PWD##*/}"
 # PKGMK_IGNORE_NEW="no"
 # PKGMK_NO_STRIP="no"
 # PKGMK_DOWNLOAD_PROG="wget"
-# PKGMK_WGET_OPTS=""
+ PKGMK_WGET_OPTS="--no-check-certificate"
 # PKGMK_CURL_OPTS=""
 # PKGMK_COMPRESSION_MODE="gz"
 
